# TurtleBot3-based-Autonomous-Search-Robot-for-Missing-Target

./: .gitignore  README.md  my_turtlebot_ws  rasp.py
.gazebo/models/doll_box/: model.config  model.sdf
.gazebo/models/doll_box/materials/scripts/: doll_box.material
camera_launch/: camera_launch_readme  yoloserv.py
my_turtlebot_ws/: 코드 저장  터틀봇3 테스트용
my_turtlebot_ws/my_turtlebot_ws/param/: my_slam_params.yaml
my_turtlebot_ws/my_turtlebot_ws/src/mission_control/: package.xml  setup.py
my_turtlebot_ws/my_turtlebot_ws/src/turtlebot3/turtlebot3_navigation2/param/: burger.yaml
my_turtlebot_ws/param/: explore_params.yaml  my_nav2_params.yaml  my_slam_params.yaml
my_turtlebot_ws/src/auto_explore_controller/: package.xml  setup.cfg  setup.py
my_turtlebot_ws/src/auto_explore_controller/auto_explore_controller/: exploration_controller.py  navigation_controller.py  position_manager.py  timer_controller.py
my_turtlebot_ws/src/auto_explore_controller/launch/: auto_exploration_terminals.launch.py
my_turtlebot_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_turtlebot_ws/src/install/cartographer/share/cartographer/: package.sh
my_turtlebot_ws/src/install/cartographer_ros_msgs/share/cartographer_ros_msgs/: package.zsh  (+1 more)
my_turtlebot_ws/src/log/: latest_build
my_turtlebot_ws/src/mission_control/mission_control/: mission_manager_node.py
my_turtlebot_ws/src/turtlebot3_simulations/turtlebot3_gazebo/launch/: turtlebot_map_second.launch.py
my_turtlebot_ws/src/turtlebot3_simulations/turtlebot3_gazebo/worlds/: turtlebot_map_second.world
(+3 files in other folders)
