<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mission_control</name>
  <version>0.0.0</version>
  <description>Fully autonomous mission control package for exploration, patrolling, and returning.</description>
  <maintainer email="yoon@todo.todo">yoon</maintainer>
  <license>Apache License 2.0</license>

  <!-- 실행에 필요한 의존성 패키지 목록 -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <!-- <depend>std_srvs</depend>  <= 더 이상 필요 없으므로 주석 처리 또는 삭제 -->
  <depend>nav2_simple_commander</depend>

  <!-- 새로 추가된 의존성 -->
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
